--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Téléphone</h4>
-                            <a href="tel:+212612345678">+212-612345678</a>
+                            <a href="tel:+212718555041">+212-718-555041</a>
                         </div>
                     </div>
 
