adding a new section certification & badges

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <a href="#accueil" class="nav-link active">Accueil</a>
                 <a href="#projets" class="nav-link">Projets</a>
                 <a href="#competences" class="nav-link">Compétences</a>
+                <a href="#certifications" class="nav-link">Certifications</a>
                 <a href="#apropos" class="nav-link">À propos</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
@@ -700,6 +701,116 @@
         </div>
     </section>
 
+    <!-- Section Certifications & Badges -->
+    <section id="certifications" class="certifications-section">
+        <div class="container-custom">
+            <!-- Certifications Header -->
+            <div class="section-header" data-aos="fade-up">
+                <h2 class="section-title">Certifications & Badges</h2>
+                <div class="title-underline"></div>
+                <p class="section-description">
+                    Découvrez mes certifications et badges professionnels
+                </p>
+            </div>
+
+            <!-- Certifications Grid -->
+            <div class="certifications-grid" data-aos="fade-up">
+                <!-- Python Essentials 1 & 2 -->
+                <article class="certification-card">
+                    <div class="cert-header">
+                        <h3 class="cert-title">Python Essentials 1 & 2</h3>
+                        <p class="cert-issuer">Cisco Networking Academy</p>
+                    </div>
+                    <div class="cert-images-container">
+                        <figure class="cert-image" data-modal="./assets/certifications/python1.png">
+                            <img src="./assets/certifications/python1.png" alt="Python Essentials 1">
+                        </figure>
+                        <figure class="cert-image" data-modal="./assets/certifications/python2.png">
+                            <img src="./assets/certifications/python2.png" alt="Python Essentials 2">
+                        </figure>
+                    </div>
+                </article>
+
+                <!-- JavaScript Essentials 1 & 2 -->
+                <article class="certification-card">
+                    <div class="cert-header">
+                        <h3 class="cert-title">JavaScript Essentials 1 & 2</h3>
+                        <p class="cert-issuer">Cisco Networking Academy</p>
+                    </div>
+                    <div class="cert-images-container">
+                        <figure class="cert-image" data-modal="./assets/certifications/javascript1.png">
+                            <img src="./assets/certifications/javascript1.png" alt="JavaScript Essentials 1">
+                        </figure>
+                        <figure class="cert-image" data-modal="./assets/certifications/javascript2.png">
+                            <img src="./assets/certifications/javascript2.png" alt="JavaScript Essentials 2">
+                        </figure>
+                    </div>
+                </article>
+
+                <!-- English for IT 1 & 2 -->
+                <article class="certification-card">
+                    <div class="cert-header">
+                        <h3 class="cert-title">English for IT (Level 1 & 2)</h3>
+                        <p class="cert-issuer">Cisco Networking Academy</p>
+                    </div>
+                    <div class="cert-images-container">
+                        <figure class="cert-image" data-modal="./assets/certifications/english1.png">
+                            <img src="./assets/certifications/english1.png" alt="English for IT Level 1">
+                        </figure>
+                        <figure class="cert-image" data-modal="./assets/certifications/english2.png">
+                            <img src="./assets/certifications/english2.png" alt="English for IT Level 2">
+                        </figure>
+                    </div>
+                </article>
+
+                <!-- Web Development -->
+                <article class="certification-card">
+                    <div class="cert-header">
+                        <h3 class="cert-title">Web Development</h3>
+                        <p class="cert-issuer">SoloLearn</p>
+                    </div>
+                    <div class="cert-images-container">
+                        <figure class="cert-image" data-modal="./assets/certifications/web-dev.png">
+                            <img src="./assets/certifications/web-dev.png" alt="Web Development">
+                        </figure>
+                    </div>
+                </article>
+            </div>
+
+            <!-- Badges Section -->
+            <div class="badges-section" data-aos="fade-up" data-aos-delay="200">
+                <h3 class="badges-title">Badges de Compétences</h3>
+
+                <!-- Python Badges -->
+                <div class="badge-group">
+                    <h4 class="badge-group-title">Python</h4>
+                    <div class="badges-container">
+                        <img src="./assets/badges/python-badge1.png" alt="Python Badge 1" class="badge-item">
+                        <img src="./assets/badges/python-badge2.png" alt="Python Badge 2" class="badge-item">
+                    </div>
+                </div>
+
+                <!-- JavaScript Badges -->
+                <div class="badge-group">
+                    <h4 class="badge-group-title">JavaScript</h4>
+                    <div class="badges-container">
+                        <img src="./assets/badges/javascript-badge1.png" alt="JavaScript Badge 1" class="badge-item">
+                        <img src="./assets/badges/javascript-badge2.png" alt="JavaScript Badge 2" class="badge-item">
+                    </div>
+                </div>
+
+                <!-- English for IT Badges -->
+                <div class="badge-group">
+                    <h4 class="badge-group-title">English for IT</h4>
+                    <div class="badges-container">
+                        <img src="./assets/badges/english-badge1.png" alt="English Badge 1" class="badge-item">
+                        <img src="./assets/badges/english-badge2.png" alt="English Badge 2" class="badge-item">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Section Contact -->
     <section id="contact" class="contact-section">
         <div class="container-custom">
@@ -719,7 +830,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <a href="mailto:achrafarrouf06@gmail.com">achrafarrouf06@gmail.com</a>
+                            <a href="mailto:achrafarrouf9@gmail.com">achrafarrouf9@gmail.com</a>
                         </div>
                     </div>
 
